--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "hbs": "^4.1.1",
     "lodash": "^4.17.20",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
